# minkindr

minkindr/: CMakeLists.txt  package.xml
minkindr/include/kindr/minimal/: angle-axis.h  macros.h  quat-transformation.h  rotation-quaternion.h  transform-2d.h
minkindr/include/kindr/minimal/implementation/: angle-axis-inl.h
minkindr/test/: test-rotation.cc  test-sim3.cc  test-transformation-2d.cc  test-transformation.cc
minkindr_python/: CMakeLists.txt  package.xml
minkindr_python/minkindr_python/: __init__.py
minkindr_python/src/: export-rotation-quaternion.cc  export-transformation.cc  module.cpp
