<?xml version="1.0"?>
<package>
  <name>minkindr</name>
  <version>1.0.0</version>
  <description>minkindr</description>

  <maintainer email="paul.furgale@gmail.com">Paul Furgale</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>eigen_vendor</build_depend>
  
  <build_depend>glog_vendor</build_depend>
  <build_depend>eigen_checks</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

