<?xml version="1.0"?>
<package format="3">
  <name>minkindr_python</name>
  <version>1.0.0</version>
  <description>Python exports for minkindr.</description>

  <maintainer email="mathias.buerki@mavt.ethz.ch">Mathias Buerki</maintainer>
  <license>New BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <build_depend>pybind11_vendor</build_depend>
  <build_depend>glog_vendor</build_depend>
  <build_depend>minkindr</build_depend>
  <build_depend>eigen_vendor</build_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
